--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
-
 {
   "version": 2,
   "builds": [
@@ -10,7 +9,7 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "frontend/dist"
+        "distDir": "dist"
       }
     }
   ],
