Fix: Update Vercel routing next step 4

--- a/vercel.json
+++ b/vercel.json
@@ -19,11 +19,7 @@
       "dest": "/backend/src/server.ts"
     },
     {
-      "src": "/assets/(.*)",
-      "headers": {
-        "cache-control": "s-maxage=31536000, immutable"
-      },
-      "dest": "/assets/$1"
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
