feat: Mejora la UI del formulario de dolor y lo hace más intuitivo

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "frontend",
   "private": true,
@@ -5,14 +6,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@google/genai": "^0.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
-    "jwt-decode": "^4.0.0"
+    "jwt-decode": "^4.0.0",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
